--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snap-shot-it",
   "description": "Smarter snapshot utility for Mocha and BDD test runners",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "bugs": "https://github.com/bahmutov/snap-shot-it/issues",
   "config": {
@@ -77,23 +77,33 @@
     "secure": "nsp check",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "test": "npm run unit",
-    "unit": "mocha src/*-spec.js"
+    "unit": "mocha src/*-spec.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "release": {
-    "analyzeCommits": "simple-commit-message"
+    "analyzeCommits": "simple-commit-message",
+    "generateNotes": "github-post-release",
+    "verifyRelease": {
+      "path": "dont-crack",
+      "test-against": []
+    }
   },
   "devDependencies": {
     "ban-sensitive-files": "1.9.0",
     "dependency-check": "2.9.1",
     "deps-ok": "1.2.0",
+    "dont-crack": "1.2.1",
     "eslint": "4.4.1",
     "eslint-plugin-immutable": "1.0.0",
     "git-issues": "1.3.1",
+    "github-post-release": "1.13.1",
     "license-checker": "13.0.3",
     "mocha": "3.5.0",
     "nsp": "2.7.0",
     "pre-git": "3.15.3",
     "prettier-standard": "6.0.0",
+    "semantic-release": "6.3.6",
+    "simple-commit-message": "3.3.1",
     "standard": "10.0.3"
   }
 }
