--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "files": [
     "src/*.js",
-    "!src/*-spec.js"
+    "!src/*spec.js"
   ],
   "homepage": "https://github.com/bahmutov/snap-shot-it#readme",
   "keywords": [
@@ -77,7 +77,7 @@
     "secure": "nsp check",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "test": "npm run unit",
-    "unit": "mocha src/*-spec.js",
+    "unit": "mocha src/*spec.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "release": {
@@ -105,5 +105,9 @@
     "semantic-release": "6.3.6",
     "simple-commit-message": "3.3.1",
     "standard": "10.0.3"
+  },
+  "dependencies": {
+    "debug": "3.0.0",
+    "snap-shot-core": "1.7.5"
   }
 }
