--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ script:
   - cd ts-demo; npm it
   - cd coffee-demo; npm it
 after_success:
+  - ls
+  - npm run
   - npm run semantic-release
 branches:
   except:
