--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "standard": "10.0.3"
   },
   "dependencies": {
+    "@bahmutov/data-driven": "1.0.0",
     "debug": "3.0.1",
     "snap-shot-compare": "2.4.0",
     "snap-shot-core": "4.1.0"
