feat: add named snapshots, close #16

--- a/package.json
+++ b/package.json
@@ -114,7 +114,9 @@
   },
   "dependencies": {
     "@bahmutov/data-driven": "1.0.0",
+    "check-more-types": "2.24.0",
     "debug": "3.0.1",
+    "ramda": "0.24.1",
     "snap-shot-compare": "2.4.0",
     "snap-shot-core": "4.1.0"
   }
