--- a/package.json
+++ b/package.json
@@ -96,16 +96,17 @@
   },
   "devDependencies": {
     "ban-sensitive-files": "1.9.0",
+    "common-tags": "1.4.0",
     "dependency-check": "2.9.1",
     "deps-ok": "1.2.1",
     "dont-crack": "1.2.1",
-    "eslint": "4.5.0",
+    "eslint": "4.6.1",
     "eslint-plugin-immutable": "1.0.0",
     "git-issues": "1.3.1",
     "github-post-release": "1.13.1",
     "license-checker": "14.0.0",
     "mocha": "3.5.0",
-    "nsp": "2.7.0",
+    "nsp": "2.8.0",
     "pre-git": "3.15.3",
     "prettier-standard": "6.0.0",
     "semantic-release": "8.0.0",
@@ -117,7 +118,7 @@
     "check-more-types": "2.24.0",
     "debug": "3.0.1",
     "ramda": "0.24.1",
-    "snap-shot-compare": "2.4.0",
-    "snap-shot-core": "4.1.0"
+    "snap-shot-compare": "2.5.0",
+    "snap-shot-core": "4.2.0"
   }
 }
