--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "eslint": "4.19.1",
     "eslint-plugin-immutable": "1.0.0",
     "git-issues": "1.3.1",
+    "lazy-ass": "1.6.0",
     "license-checker": "17.0.0",
     "mocha": "5.1.1",
     "nsp": "3.2.1",
@@ -117,6 +118,6 @@
     "has-only": "1.1.1",
     "ramda": "0.25.0",
     "snap-shot-compare": "2.7.1",
-    "snap-shot-core": "5.0.4"
+    "snap-shot-core": "6.0.0"
   }
 }
