break: do not use index for named snapshot, fix #142

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "test-two-specs": "mocha test/two-specs",
     "test-failing-hook": "mocha test/failing-hook",
     "prune-demo": "cd prune-demo; mocha spec.js",
+    "named-demo": "cd named-demo; mocha spec*.js",
     "travis-deploy-once": "travis-deploy-once"
   },
   "release": {
