feat: type information

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 script:
   - npm test
   - DEBUG=snap-shot-it npm run test-two-specs
-  - cd ts-demo; npm it; cd ..
+  - cd ts-demo; npm it; ./node_modules/.bin/tsc; cd ..
   - cd coffee-demo; npm it; cd ..
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
