--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0-development",
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "bugs": "https://github.com/bahmutov/snap-shot-it/issues",
+  "types": "src/index.d.ts",
   "config": {
     "pre-git": {
       "commit-msg": "simple",
@@ -48,6 +49,7 @@
   },
   "files": [
     "src/*.js",
+    "src/*.ts",
     "!src/*spec.js"
   ],
   "homepage": "https://github.com/bahmutov/snap-shot-it#readme",
