--- a/ts-demo/package.json
+++ b/ts-demo/package.json
@@ -9,7 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "snap-shot-it": ".."
+  },
   "devDependencies": {
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.0",
     "ts-mocha": "2.0.0",
     "typescript": "3.1.3"
   }
