--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "echo Testing as if this module was used on CI",
         "CI=1 npm test",
         "npm run test-two-specs",
-        "cd ts-demo; npm it",
-        "cd coffee-demo; npm it",
+        "npm run ts-demo",
+        "npm run coffee-demo",
         "git add src/*.js",
         "npm run ban"
       ],
@@ -78,6 +78,8 @@
     "license": "license-checker --production --onlyunknown --csv",
     "lint": "standard --verbose --fix src/*.js",
     "named-demo": "cd named-demo; mocha spec*.js",
+    "ts-demo": "cd ts-demo; npm it",
+    "coffee-demo": "cd coffee-demo; npm it",
     "postlint": "eslint --fix src/*.js",
     "prelint": "npm run pretty",
     "pretest": "npm run lint",
