chore: use npm ci for ts-demo

--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "license": "license-checker --production --onlyunknown --csv",
     "lint": "standard --verbose --fix src/*.js",
     "named-demo": "cd named-demo; mocha spec*.js",
-    "ts-demo": "cd ts-demo; npm it",
-    "coffee-demo": "cd coffee-demo; npm it",
+    "ts-demo": "cd ts-demo; npm ci; npm test",
+    "coffee-demo": "cd coffee-demo; npm ci; npm test",
     "postlint": "eslint --fix src/*.js",
     "prelint": "npm run pretty",
     "pretest": "npm run lint",
