--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,36 @@ cache:
     - ~/.npm
 notifications:
   email: true
-node_js:
-  - '10'
-install:
-  - npm ci
+node_js: '10'
+
+stages:
+  - 'Tests'
+  - name: 'Deploy'
+    if: branch = master AND type = push
+
+install: npm ci
+
 script:
   - npm test
   - DEBUG=snap-shot-it npm run test-two-specs
   - npm run ts-demo
   - npm run coffee-demo
-after_success:
-  - npm run travis-deploy-once "npm run semantic-release"
+
+jobs:
+  fail_fast: true
+  include:
+    - stage: 'Tests'
+      name: 'Fixed Dependencies'
+    - name: 'Floating Depenencies'
+      before_install: rm package-lock.json
+      install: npm install
+
+    - stage: 'Deploy'
+      name: 'Publish to npm'
+      install:
+        - yarn install --non-interactive
+      script: yarn semantic-release
+
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
