TODO comments updated by @imdoneio [ci skip] [imdone skip]

--- a/.imdone/config.json
+++ b/.imdone/config.json
@@ -26,6 +26,10 @@
     {
       "name": "HELP",
       "hidden": false
+    },
+    {
+      "name": "TODO",
+      "hidden": false
     }
   ],
   "marked": {
