--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "dont-crack": "1.2.1",
     "eslint": "5.16.0",
     "eslint-plugin-immutable": "1.0.0",
+    "folktale": "2.3.2",
     "git-issues": "1.3.1",
     "lazy-ass": "1.6.0",
     "license-checker": "25.0.1",
