--- a/package.json
+++ b/package.json
@@ -99,7 +99,6 @@
     "eslint-plugin-immutable": "1.0.0",
     "folktale": "2.3.2",
     "git-issues": "1.3.1",
-    "lazy-ass": "1.6.0",
     "license-checker": "25.0.1",
     "mocha": "6.1.4",
     "pre-git": "3.17.1",
@@ -116,6 +115,7 @@
     "pluralize": "7.0.0",
     "ramda": "0.26.1",
     "snap-shot-compare": "2.8.3",
-    "snap-shot-core": "8.1.0"
+    "snap-shot-core": "9.0.0",
+    "lazy-ass": "1.6.0"
   }
 }
