fix: accurate snapshot pruning

--- a/package.json
+++ b/package.json
@@ -112,10 +112,10 @@
     "check-more-types": "2.24.0",
     "debug": "4.1.1",
     "has-only": "1.1.1",
+    "lazy-ass": "1.6.0",
     "pluralize": "7.0.0",
     "ramda": "0.26.1",
     "snap-shot-compare": "2.8.3",
-    "snap-shot-core": "9.0.0",
-    "lazy-ass": "1.6.0"
+    "snap-shot-core": "10.0.0"
   }
 }
