feat: print duplicate test names in parts, close #370

--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "common-tags": "1.8.0",
     "debug": "4.1.1",
     "has-only": "1.1.1",
+    "its-name": "1.0.0",
     "lazy-ass": "1.6.0",
     "pluralize": "7.0.0",
     "ramda": "0.26.1",
