chore: add stop-only check

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install: npm ci
 
 script:
   - npm test
+  - npm run stop-only
   - DEBUG=snap-shot-it npm run test-two-specs
   - npm run ts-demo
   - npm run coffee-demo
