--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "pre-commit": [
         "npm prune",
         "npm run deps",
+        "npm run warn-only",
         "npm test",
         "echo Testing as if this module was used on CI",
         "CI=1 npm test",
@@ -21,6 +22,7 @@
         "npm run ban"
       ],
       "pre-push": [
+        "npm run stop-only",
         "npm run license",
         "npm run ban -- --all",
         "npm run size"
@@ -84,7 +86,9 @@
     "test-two-specs": "mocha test/two-specs",
     "test": "npm run unit",
     "unit": "mocha src/*spec.js",
-    "watch": "npm run unit -- --watch"
+    "watch": "npm run unit -- --watch",
+    "stop-only": "stop-only --folder src",
+    "warn-only": "stop-only --folder src --warn"
   },
   "release": {
     "analyzeCommits": "simple-commit-message"
@@ -104,7 +108,8 @@
     "prettier-standard": "9.1.1",
     "semantic-release": "15.13.16",
     "simple-commit-message": "4.0.3",
-    "standard": "12.0.1"
+    "standard": "12.0.1",
+    "stop-only": "3.0.1"
   },
   "dependencies": {
     "@bahmutov/data-driven": "1.0.0",
