--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "license": "MIT",
   "main": "src/",
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
