--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "mocha": "6.2.3",
     "pre-git": "3.17.1",
     "prettier-standard": "16.4.1",
-    "semantic-release": "15.14.0",
+    "semantic-release": "^19.0.5",
     "simple-commit-message": "4.1.3",
     "standard": "12.0.1",
     "stop-only": "3.1.2"
